--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "react": "19.0.0",
     "react-hook-form": "^7.58.1",
     "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "zod": "^3.25.67",
-    "react-native-gesture-handler": "~2.24.0"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
