--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "favicon": "./assets/images/favicon.ico"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-av"
     ]
   }
 }
