--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "^4.5.7",
     "@react-native-picker/picker": "2.11.1",
     "@shopify/flash-list": "1.7.6",
     "@supabase/supabase-js": "^2.50.0",
@@ -37,7 +38,9 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "expo-contacts": "~14.2.5",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
