--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/slider": "^4.5.7",
     "@react-native-picker/picker": "2.11.1",
     "@shopify/flash-list": "1.7.6",
+    "@shopify/react-native-skia": "^2.1.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.82.0",
     "date-fns": "^4.1.0",
@@ -22,9 +23,11 @@
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-contacts": "~14.2.5",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.6",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -38,9 +41,9 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "zod": "^3.25.67",
-    "expo-contacts": "~14.2.5",
-    "expo-location": "~18.1.6"
+    "react-native-svg": "^15.12.1",
+    "victory-native": "^41.17.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
