--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-location": "~18.1.6",
+    "expo-print": "~14.1.4",
     "expo-router": "~5.1.0",
+    "expo-sharing": "~13.1.1",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
