--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.1",
+    "react-native-view-shot": "^4.0.3",
     "victory-native": "^41.17.4",
     "zod": "^3.25.67"
   },
