--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.1",
     "victory-native": "^41.17.4",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
