--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "11.4.1",
@@ -28,7 +29,9 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-location": "~18.1.6",
+    "expo-print": "~14.1.4",
     "expo-router": "~5.1.0",
+    "expo-sharing": "~13.1.1",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -42,12 +45,13 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.1",
+    "react-native-view-shot": "^4.0.3",
     "victory-native": "^41.17.4",
-    "zod": "^3.25.67",
-    "expo-dev-client": "~5.2.4"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
