--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-picker/picker": "2.11.1",
     "@shopify/flash-list": "1.7.6",
-    "@shopify/react-native-skia": "^2.1.1",
+    "@shopify/react-native-skia": "v2.0.0-next.4",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.82.0",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.12",
+    "expo": "53.0.20",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-contacts": "~14.2.5",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.5",
+    "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.1.0",
+    "expo-router": "~5.1.4",
     "expo-sharing": "~13.1.1",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-hook-form": "^7.58.1",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
@@ -44,7 +44,7 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.11.2",
     "react-native-view-shot": "^4.0.3",
     "victory-native": "^41.17.4",
     "zod": "^3.25.67"
